retrieve, and create comments

--- a/public/blogFeed.html
+++ b/public/blogFeed.html
@@ -1,1 +1,29 @@
 <!-- THIS IS THE DEFAULT HOME PAGE WHEN A USER LOGS IN -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tech-Feed</title>
+</head>
+<body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Blog-About-IT</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link" href="#">Sign Up</a>
+            <a class="nav-link" href="#">Sign In</a>
+            <a class="nav-link" href="#">About Us</a>
+          </div>
+        </div>
+      </div>
+    </nav>
+</body>
+</html>
