html files boiler plate nav bar

--- a/public/blogFeed.html
+++ b/public/blogFeed.html
@@ -17,13 +17,14 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-            <a class="nav-link" href="#">Sign Up</a>
-            <a class="nav-link" href="#">Sign In</a>
-            <a class="nav-link" href="#">About Us</a>
+            <a class="nav-link active" aria-current="page" href="./blogFeed.html">Feed</a>
+            <a class="nav-link" href="./profile.html">Profile</a>
+            <a class="nav-link" href="./">Log out</a>
+            <a class="nav-link" href="./aboutUs.html">About Us</a>
           </div>
         </div>
       </div>
     </nav>
+    <div id="postContainer" class="container"></div>
 </body>
 </html>
