--- a/public/signIn.html
+++ b/public/signIn.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Profile</title>
+  <title>Sign In</title>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -16,9 +16,9 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link active" aria-current="page" href="./profile.html">Profile</a>
-          <a class="nav-link" href="./blogFeed.html">Feed</a>
-          <a class="nav-link" href="#">Log out</a>
+          <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+          <a class="nav-link" href="./signUp.html">Sign Up</a>
+          <a class="nav-link" href="./signIn.html">Sign In</a>
           <a class="nav-link" href="./aboutUs.html">About Us</a>
         </div>
       </div>
