--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <link rel="resetStylesheet" href="../css/reset.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  
+
 </head>
 
 <body>
@@ -30,24 +30,32 @@
       </div>
     </div>
   </nav>
-    <div id="content">
-      <div id="aboutProject" class="container">
-        This Project was developed as a means for registered users to have the opportunity to blog about tech related topics, view other users blog posts andcomment on those posts that compel them to do so. This project was developed as a part of the UCI 3 month full stack web development bootcamp at the close of year 2021, and start of year 2022.
-        <br>
-        <br>
-        This project features Object Relational Mapping. There are many files, which can be overwhelming but in order to keep a separation of concerns, we must separate the functionality into multiple components, and then export/import those files into different files for reference and functionality.
-        <br><br>
-        To sign up one need only to click the sign-up tab located in the navigation bar, or click <a href="signUp.html">here</a>. Sign up with an e-mail, username, and password. This project uses the passport NPM package that allows for sequelizing of a hash, encrypting and protecting a user password, leaving the account system un-hackable.
-      </div>
+  <div id="content">
+    <div id="aboutProject" class="container">
+      This Project was developed as a means for registered users to have the opportunity to blog about tech related
+      topics, view other users blog posts andcomment on those posts that compel them to do so. This project was
+      developed as a part of the UCI 3 month full stack web development bootcamp at the close of year 2021, and start of
+      year 2022.
+      <br>
+      <br>
+      This project features Object Relational Mapping. There are many files, which can be overwhelming but in order to
+      keep a separation of concerns, we must separate the functionality into multiple components, and then export/import
+      those files into different files for reference and functionality.
+      <br><br>
+      To sign up one need only to click the sign-up tab located in the navigation bar, or click <a
+        href="signUp.html">here</a>. Sign up with an e-mail, username, and password. This project uses the passport NPM
+      package that allows for sequelizing of a hash, encrypting and protecting a user password, leaving the account
+      system un-hackable.
     </div>
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
-    <script>
+  <script>
 
-    </script>
+  </script>
 </body>
 
 </html>
