revamped html to match rubric

--- a/public/aboutUs.html
+++ b/public/aboutUs.html
@@ -21,9 +21,8 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link active" aria-current="page" href="./profile.html">Profile</a>
-          <a class="nav-link" href="./blogFeed.html">Feed</a>
-          <a class="nav-link" href="#">Log out</a>
+          <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+          <a class="nav-link" href="./signUp.html">Sign up</a>
           <a class="nav-link" href="./aboutUs.html">About Us</a>
         </div>
       </div>
