--- a/public/index.html
+++ b/public/index.html
@@ -22,10 +22,10 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-          <a class="nav-link" href="#">Sign Up</a>
-          <a class="nav-link" href="#">Sign In</a>
-          <a class="nav-link" href="#">About Us</a>
+          <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+          <a class="nav-link" href="./signUp.html">Sign Up</a>
+          <a class="nav-link" href="./signIn.html">Sign In</a>
+          <a class="nav-link" href="./aboutUs.html">About Us</a>
         </div>
       </div>
     </div>
@@ -48,6 +48,8 @@
       system un-hackable.
     </div>
   </div>
+  <div id="postContainer" class="container"></div>
+
 
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
