--- a/public/profile.html
+++ b/public/profile.html
@@ -20,7 +20,7 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-link active" aria-current="page" href="./profile.html">Profile</a>
-          <a class="nav-link" href="./blogFeed.html">Feed</a>
+          <a class="nav-link" href="./index.html">Feed</a>
           <a class="nav-link" href="#">Log out</a>
           <a class="nav-link" href="./aboutUs.html">About Us</a>
         </div>
