--- a/public/index.html
+++ b/public/index.html
@@ -23,9 +23,9 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-          <a class="nav-link" href="./signUp.html">Sign Up</a>
+          <a class="nav-link" href="./profile.html">Profile</a>
           <a class="nav-link" href="./signIn.html">Sign In</a>
-          <a class="nav-link" href="./aboutUs.html">About Us</a>
+          <a class="nav-link" href="#">Sign Out</a>
         </div>
       </div>
     </div>
