--- a/public/index.html
+++ b/public/index.html
@@ -30,8 +30,7 @@
       </div>
     </div>
   </nav>
-  <div id="content">
-    <div id="aboutProject" class="container">
+    <div id="aboutProject">
       This Project was developed as a means for registered users to have the opportunity to blog about tech related
       topics, view other users blog posts andcomment on those posts that compel them to do so. This project was
       developed as a part of the UCI 3 month full stack web development bootcamp at the close of year 2021, and start of
@@ -47,7 +46,6 @@
       package that allows for sequelizing of a hash, encrypting and protecting a user password, leaving the account
       system un-hackable.
     </div>
-  </div>
   <div class="row">
     <form>
       <div class="mb-3">
