removed aboutus. added logout function

--- a/public/index.html
+++ b/public/index.html
@@ -113,6 +113,12 @@
         location ='/post.html'
       }
     })
+
+    async function logOut() {
+      localStorage.removeItem('username')
+      localStorage.removeItem('token')
+      location = '/index.html'
+    }
   </script>
 </body>
 
