--- a/public/profile.html
+++ b/public/profile.html
@@ -35,7 +35,11 @@
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
   <script>
-
+    async function logOut() {
+       localStorage.removeItem('username')
+       localStorage.removeItem('token')
+       location = '/index.html'
+     }
   </script>
 </body>
 
