--- a/public/index.html
+++ b/public/index.html
@@ -25,39 +25,51 @@
           <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
           <a class="nav-link" href="./profile.html">Profile</a>
           <a class="nav-link" href="./signIn.html">Sign In</a>
-          <a class="nav-link" href="#">Sign Out</a>
+          <a class="nav-link" id="signout">Sign Out</a>
         </div>
       </div>
     </div>
   </nav>
-    <div id="aboutProject">
-      This Project was developed as a means for registered users to have the opportunity to blog about tech related
-      topics, view other users blog posts andcomment on those posts that compel them to do so. This project was
-      developed as a part of the UCI 3 month full stack web development bootcamp at the close of year 2021, and start of
-      year 2022.
-      <br>
-      <br>
-      This project features Object Relational Mapping. There are many files, which can be overwhelming but in order to
-      keep a separation of concerns, we must separate the functionality into multiple components, and then export/import
-      those files into different files for reference and functionality.
-      <br><br>
-      To sign up one need only to click the sign-up tab located in the navigation bar, or click <a
-        href="signUp.html">here</a>. Sign up with an e-mail, username, and password. This project uses the passport NPM
-      package that allows for sequelizing of a hash, encrypting and protecting a user password, leaving the account
-      system un-hackable.
-    </div>
-  <div class="row">
-    <form>
-      <div class="mb-3">
-        <label for="title" class="form-label">Title</label>
-        <input type="text" class="form-control" id="title">
-      </div>
-      <div class="mb-3">
-        <label for="body" class="form-label">Body</label>
-        <textarea class="form-control" name="body" id="body" cols="30" rows="10"></textarea>
-      </div>
-      <button id="post" type="submit" class="btn btn-primary">Create Post</button>
-    </form>
+  <div id="aboutProject">
+    This Project was developed as a means for registered users to have the opportunity to blog about tech related
+    topics, view other users blog posts andcomment on those posts that compel them to do so. This project was
+    developed as a part of the UCI 3 month full stack web development bootcamp at the close of year 2021, and start of
+    year 2022.
+    <br>
+    <br>
+    This project features Object Relational Mapping. There are many files, which can be overwhelming but in order to
+    keep a separation of concerns, we must separate the functionality into multiple components, and then export/import
+    those files into different files for reference and functionality.
+    <br><br>
+    To sign up one need only to click the sign-up tab located in the navigation bar, or click <a
+      href="signUp.html">here</a>. Sign up with an e-mail, username, and password. This project uses the passport NPM
+    package that allows for sequelizing of a hash, encrypting and protecting a user password, leaving the account
+    system un-hackable.
+  </div>
+  <br>
+  <br>
+  <hr>
+  <br>
+  <br>
+  <span style="font-weight:700; font-size:xx-large;">Create a Post</span>
+  <br>
+  <br>
+  <div id="container">
+      <form>
+        <div class="mb-6">
+          <label for="title" class="form-label" style="font-size:x-large">Title</label>
+          <br>
+          <br>
+          <input type="text" class="form-control" id="title">
+        </div>
+        <div class="mb-6">
+          <label for="body" class="form-label" style="font-size:x-large">Body</label>
+          <br>
+          <br>
+          <textarea class="form-control" name="body" id="body" cols="30" rows="10"></textarea>
+        </div>
+        <button id="post" type="submit" class="btn btn-primary">Create Post</button>
+      </form>
   </div>
   <div id="postContainer" class="container"></div>
 
@@ -77,9 +89,9 @@
           'Authorization': `Bearer ${localStorage.getItem('token')}`
         }
       })
-      .then(res => {
-        console.log(res)
-      })
+        .then(res => {
+          console.log(res)
+        })
     }
 
     document.getElementById('post').addEventListener('click', event => {
@@ -92,33 +104,40 @@
         'Authorization': `Bearer ${localStorage.getItem('token')}`
       }
     })
-    .then(res => {
-      console.log(res.data)
-      let posts = res.data
-      posts.forEach(post => {
-        let postElem = document.createElement('div')
-        postElem.innerHTML = `
+      .then(res => {
+        console.log(res.data)
+        let posts = res.data
+        posts.forEach(post => {
+          let postElem = document.createElement('div')
+          postElem.innerHTML = `
         <h3 class = "posted" data-postid = "${post.id}"> ${post.title} </h3>
         <h5> posted by ${post.User.username}</h5>
         <p> ${post.body}</p>
         `
-        document.getElemenyById('posts').prepend(postElem)
+          document.getElemenyById('postContainer').prepend(postElem)
+        })
       })
-    })
 
     document.addEventListener('click', event => {
-      if(event.target.classList.contains('posted')) {
+      if (event.target.classList.contains('posted')) {
         console.log('ping')
         localStorage.setItem('postId', event.target.dataset.postid)
-        location ='/post.html'
+        location = '/post.html'
       }
     })
 
     async function logOut() {
       localStorage.removeItem('username')
       localStorage.removeItem('token')
-      location = '/index.html'
+      location = '/public/index.html'
     }
+
+    document.getElementById('signout').addEventListener('click', event => {
+      event.preventDefault()
+      logOut()
+    })
+
+    createPost();
   </script>
 </body>
 
