--- a/public/profile.html
+++ b/public/profile.html
@@ -8,7 +8,7 @@
   <title>Profile</title>
   <link rel="resetStylesheet" href="../css/reset.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-  integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
 <body>
@@ -23,7 +23,7 @@
         <div class="navbar-nav">
           <a class="nav-link active" aria-current="page" href="./profile.html">Profile</a>
           <a class="nav-link" href="./index.html">Feed</a>
-          <a class="nav-link" href="#">Log out</a>
+          <a class="nav-link" id="signout">Log out</a>
         </div>
       </div>
     </div>
@@ -36,10 +36,15 @@
     crossorigin="anonymous"></script>
   <script>
     async function logOut() {
-       localStorage.removeItem('username')
-       localStorage.removeItem('token')
-       location = '/index.html'
-     }
+      localStorage.removeItem('username')
+      localStorage.removeItem('token')
+      location = '/public/index.html'
+    }
+
+    document.getElementById('signout').addEventListener('click', event => {
+      event.preventDefault()
+      logOut()
+    })
   </script>
 </body>
 
