--- a/public/signUp.html
+++ b/public/signUp.html
@@ -28,7 +28,39 @@
       </div>
     </div>
   </nav>
-
+  <div class="container">
+    <div class="d-flex justify-content-center h-100">
+      <div class="card">
+        <div class="card-header" style="color: white;">
+          <h3>Sign Up</h3>
+        </div>
+        <div class="card-body">
+          <form>
+            <div class="input-group form-group" style="padding-bottom: 10px;">
+              <div class="input-group-prepend">
+                <span class="input-group-text"><i class="fas fa-user"></i></span>
+              </div>
+              <input type="text" class="form-control" placeholder="Username">
+            </div>
+            <div class="input-group form-group" style="padding-bottom: 5px;">
+              <div class="input-group-prepend">
+                <span class="input-group-text"><i class="fas fa-key"></i></span>
+              </div>
+              <input type="password" class="form-control" placeholder="Password">
+            </div>
+            <div class="form-group">
+              <input type="submit" value="Sign Up" class="btn float-right login_btn">
+            </div>
+          </form>
+        </div>
+        <div class="card-footer">
+          <div class="d-flex justify-content-center links">
+            Already have an account?<a href="/public/signIn.html">Sign In</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
