--- a/public/signUp.html
+++ b/public/signUp.html
@@ -14,7 +14,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Blog-About-IT</a>
+      <a class="navbar-brand" href="./index.html">Blog-About-IT</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -55,7 +55,7 @@
         </div>
         <div class="card-footer">
           <div class="d-flex justify-content-center links">
-            Already have an account?<a href="/public/signIn.html">Sign In</a>
+            Already have an account? <a href="/public/signIn.html"> Sign In</a>
           </div>
         </div>
       </div>
