added input id's, commentedOut signout(index)

--- a/public/index.html
+++ b/public/index.html
@@ -137,10 +137,10 @@
       location = '/public/index.html'
     }
 
-    document.getElementById('signout').addEventListener('click', event => {
-      event.preventDefault()
-      logOut()
-    })
+    // document.getElementById('signout').addEventListener('click', event => {
+    //   event.preventDefault()
+    //   logOut()
+    // })
 
     createPost();
   </script>
