--- a/public/signIn.html
+++ b/public/signIn.html
@@ -12,62 +12,91 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="./index.html">Blog-About-IT</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-          <a class="nav-link" href="./signUp.html">Sign Up</a>
-          <a class="nav-link" href="./signIn.html">Sign In</a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Blog about IT</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+          aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./profile.html">Dashboard</a>
+            </li>
+          </ul>
+          <a class="navbar-text" href="signIn.html">
+            Sign In
+          </a>
         </div>
       </div>
-    </div>
-  </nav>
-  <div class="container">
-    <div class="d-flex justify-content-center h-100">
-      <div class="card">
-        <div class="card-header" style="color: white;">
-          <h3>Sign In</h3>
-        </div>
-        <div class="card-body">
-          <form>
-            <div class="input-group form-group" style="padding-bottom: 10px;">
-              <div class="input-group-prepend">
-                <span class="input-group-text"><i class="fas fa-user"></i></span>
+    </nav>
+    <div class="container">
+      <div class="d-flex justify-content-center h-100">
+        <div class="card">
+          <div class="card-header" style="color: white;">
+            <h3>Sign In</h3>
+          </div>
+          <div class="card-body">
+            <form>
+              <div class="input-group form-group" style="padding-bottom: 10px;">
+                <div class="input-group-prepend">
+                  <span class="input-group-text"><i class="fas fa-user"></i></span>
+                </div>
+                <input type="text" class="form-control" placeholder="Username" id="lUsername">
               </div>
-              <input type="text" class="form-control" placeholder="Username">
-            </div>
-            <div class="input-group form-group" style="padding-bottom: 5px;">
-              <div class="input-group-prepend">
-                <span class="input-group-text"><i class="fas fa-key"></i></span>
+              <div class="input-group form-group" style="padding-bottom: 5px;">
+                <div class="input-group-prepend">
+                  <span class="input-group-text"><i class="fas fa-key"></i></span>
+                </div>
+                <input type="password" class="form-control" placeholder="Password" id='lPassword'>
               </div>
-              <input type="password" class="form-control" placeholder="Password">
+              <div class="form-group">
+                <input type="submit" value="Sign In" class="btn float-right login_btn" id="login">
+              </div>
+            </form>
+          </div>
+          <div class="card-footer">
+            <div class="d-flex justify-content-center links">
+              Don't have an account? <a href="./signUp.html">Sign Up</a>
             </div>
-            <div class="form-group">
-              <input type="submit" value="Sign In" class="btn float-right login_btn">
-            </div>
-          </form>
-        </div>
-        <div class="card-footer">
-          <div class="d-flex justify-content-center links">
-            Don't have an account? <a href="./signUp.html">Sign Up</a>
           </div>
         </div>
       </div>
     </div>
-  </div>
-  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
-  <script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"></script>
+    <script>
+      async function loginUser(user) {
+        try {
+          const { data } = await axios.post('/api/users/login', user)
+          return data
+        } catch (err) {
+          alert('Something Went Wrong. Please Try Again')
+        }
+      }
 
-  </script>
+      document.getElementById('login').addEventListener('click', async function (event) {
+        event.preventDefault()
+
+        const { username, token } = await loginUser({
+          username: document.getElementById('lUsername').value,
+          password: document.getElementById('lPassword').value
+        })
+
+        if (token) {
+          localStorage.setItem('username', username)
+          localStorage.setItem('token', token)
+        } else {
+          alert('Invalid Username or Password. Please Try Again.')
+        }
+      })
+    </script>
 </body>
 
 </html>
