added render functions for posts and username

--- a/public/index.html
+++ b/public/index.html
@@ -119,7 +119,7 @@
         <h5> posted by ${post.User.username}</h5>
         <p> ${post.body}</p>
         `
-          document.getElemenyById('postContainer').prepend(postElem)
+          document.getElementById('postContainer').prepend(postElem)
         })
       })
 
