--- a/public/signUp.html
+++ b/public/signUp.html
@@ -28,7 +28,7 @@
             <a class="nav-link" href="./profile.html">Dashboard</a>
           </li>
         </ul>
-        <a class="navbar-text" href="signIn.html">
+        <a class="navbar-text" href="./signIn.html">
           Sign In
         </a>
       </div>
@@ -61,7 +61,7 @@
         </div>
         <div class="card-footer">
           <div class="d-flex justify-content-center links">
-            Already have an account? <a href="/public/signIn.html"> Sign In</a>
+            Already have an account? <a href="./signIn.html"> Sign In</a>
           </div>
         </div>
       </div>
