--- a/public/profile.html
+++ b/public/profile.html
@@ -34,7 +34,15 @@
       </div>
     </div>
   </nav>
+    <div class="container">
+      <div class="row bg-dark p-5 rounded-lg mb-3 mt-3">
+        <h1 class="display-4">Blog About IT</h1>
+        <p class="lead">The Premier IT Blog</p>
+        <hr class="my-4">
+        <p class="lead">Here are your posts <span id="username"></span>!</p>
+  <div id="posts">
 
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
@@ -44,13 +52,54 @@
     async function logOut() {
       localStorage.removeItem('username')
       localStorage.removeItem('token')
-      location = '/public/index.html'
+      location = './index.html'
     }
 
     document.getElementById('signout').addEventListener('click', event => {
       event.preventDefault()
       logOut()
     })
+
+    async function getProfile() {
+      try {
+        const { data: user } = await axios.get('/api/users/profile', {
+          headers: {
+            'Authorization': `Bearer ${localStorage.getItem('token')}`
+          }
+        })
+        return user
+      } catch (err) {
+        location = './signIn.html'
+      }
+    }
+
+    async function renderPost({ title, body }) {
+      const postElem = document.createElement('div')
+      postElem.innerHTML = `
+      <div class ="row bg-dark p-5 rounded-md mb-2 mt-2">
+        <h3>${title}</h3>
+        <p class="lead">${body}</p>
+        <hr class="my-4">
+      </div>
+      `
+      document.getElementById('posts').prepend(postElem)
+    }
+
+    async function renderPosts() {
+      const { posts } = await getProfile()
+
+      posts.forEach(post => renderPost(post))
+    }
+
+    async function renderUsername() {
+      const username = localStorage.getItem('username')
+
+      document.getElementById('username').textContent = username
+    }
+
+
+  renderPosts()
+  renderUsername()
   </script>
 </body>
 
