--- a/public/signIn.html
+++ b/public/signIn.html
@@ -92,6 +92,7 @@
         if (token) {
           localStorage.setItem('username', username)
           localStorage.setItem('token', token)
+          location = '/'
         } else {
           alert('Invalid Username or Password. Please Try Again.')
         }
