--- a/public/signIn.html
+++ b/public/signIn.html
@@ -92,7 +92,7 @@
         if (token) {
           localStorage.setItem('username', username)
           localStorage.setItem('token', token)
-          location = '/'
+          location = './feed.html'
         } else {
           alert('Invalid Username or Password. Please Try Again.')
         }
