added links, formatted post page

--- a/public/feed.html
+++ b/public/feed.html
@@ -134,7 +134,7 @@
     async function logOut() {
       localStorage.removeItem('username')
       localStorage.removeItem('token')
-      location = '/public/index.html'
+      location = '/index.html'
     }
 
     document.getElementById('signout').addEventListener('click', event => {
