--- a/public/index.html
+++ b/public/index.html
@@ -131,18 +131,17 @@
       }
     })
 
-    async function logOut() {
-      localStorage.removeItem('username')
-      localStorage.removeItem('token')
-      location = '/public/index.html'
-    }
+    // async function logOut() {
+    //   localStorage.removeItem('username')
+    //   localStorage.removeItem('token')
+    //   location = '/public/index.html'
+    // }
 
     // document.getElementById('signout').addEventListener('click', event => {
     //   event.preventDefault()
     //   logOut()
     // })
 
-    createPost();
   </script>
 </body>
 
