--- a/public/signIn.html
+++ b/public/signIn.html
@@ -37,7 +37,7 @@
     <div class="container">
       <div class="d-flex justify-content-center h-100">
         <div class="card">
-          <div class="card-header" style="color: white;">
+          <div class="card-header" style="color: black;">
             <h3>Sign In</h3>
           </div>
           <div class="card-body">
@@ -55,7 +55,7 @@
                 <input type="password" class="form-control" placeholder="Password" id='lPassword'>
               </div>
               <div class="form-group">
-                <input type="submit" value="Sign In" class="btn float-right login_btn" id="login">
+                <button class="btn float-right login-btn" id="login"">Sign In</button>
               </div>
             </form>
           </div>
