--- a/public/feed.html
+++ b/public/feed.html
@@ -35,28 +35,12 @@
       </div>
     </div>
   </nav>
-  <div id="aboutProject">
-    This Project was developed as a means for registered users to have the opportunity to blog about tech related
-    topics, view other users blog posts andcomment on those posts that compel them to do so. This project was
-    developed as a part of the UCI 3 month full stack web development bootcamp at the close of year 2021, and start of
-    year 2022.
-    <br>
-    <br>
-    This project features Object Relational Mapping. There are many files, which can be overwhelming but in order to
-    keep a separation of concerns, we must separate the functionality into multiple components, and then export/import
-    those files into different files for reference and functionality.
-    <br><br>
-    To sign up one need only to click the sign-up tab located in the navigation bar, or click <a
-      href="signUp.html">here</a>. Sign up with an e-mail, username, and password. This project uses the passport NPM
-    package that allows for sequelizing of a hash, encrypting and protecting a user password, leaving the account
-    system un-hackable.
-  </div>
   <br>
   <br>
   <hr>
   <br>
   <br>
-  <span style="font-weight:700; font-size:xx-large;">Create a Post</span>
+  <p style="font-weight:700; font-size:xx-large; text-align:center; background-color: lightblue">Blog About IT</p>
   <br>
   <br>
   <div id="container">
