--- a/public/index.html
+++ b/public/index.html
@@ -84,52 +84,64 @@
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
   <script>
-    function createPost() {
-      let newPost = {
-        title: document.getElementById('title').value,
-        body: document.getElementById('body').value
-      }
-      axios.post('/api/posts', newPost, {
-        headers: {
-          'Authorization': `Bearer ${localStorage.getItem('token')}`
-        }
-      })
-        .then(res => {
-          console.log(res)
-        })
-    }
 
-    document.getElementById('post').addEventListener('click', event => {
-      event.preventDefault()
-      createPost()
-    })
+    // CODE NON FUNCTIONAL ON INDEX.HTML ONLY WORKS THROUGH LOGGING IN AND BEING REDIRECTED TO FEED.HTML //
+    // function createPost() {
+    //   let newPost = {
+    //     title: document.getElementById('title').value,
+    //     body: document.getElementById('body').value
+    //   }
+    //   axios.post('/api/posts', newPost, {
+    //     headers: {
+    //       'Authorization': `Bearer ${localStorage.getItem('token')}`
+    //     }
+    //   })
+    //     .then(res => {
+    //       console.log(res)
+    //     })
+    // }
 
-    axios.get('/api/posts', {
-      headers: {
-        'Authorization': `Bearer ${localStorage.getItem('token')}`
-      }
-    })
-      .then(res => {
-        console.log(res.data)
-        let posts = res.data
-        posts.forEach(post => {
-          let postElem = document.createElement('div')
-          postElem.innerHTML = `
-        <h3 class = "posted" data-postid = "${post.id}"> ${post.title} </h3>
-        <h5> posted by ${post.User.username}</h5>
-        <p> ${post.body}</p>
-        `
-          document.getElementById('postContainer').prepend(postElem)
-        })
-      })
+    // document.getElementById('post').addEventListener('click', event => {
+    //   event.preventDefault()
+    //   createPost()
+    // })
 
-    document.addEventListener('click', event => {
-      if (event.target.classList.contains('posted')) {
-        console.log('ping')
-        localStorage.setItem('postId', event.target.dataset.postid)
-        location = '/post.html'
-      }
-    })
+    // axios.get('/api/posts', {
+    //   headers: {
+    //     'Authorization': `Bearer ${localStorage.getItem('token')}`
+    //   }
+    // })
+    //   .then(res => {
+    //     console.log(res.data)
+    //     let posts = res.data
+    //     posts.forEach(post => {
+    //       let postElem = document.createElement('div')
+    //       postElem.innerHTML = `
+    //     <h3 class = "posted" data-postid = "${post.id}"> ${post.title} </h3>
+    //     <h5> posted by ${post.User.username}</h5>
+    //     <p> ${post.body}</p>
+    //     `
+    //       document.getElementById('postContainer').prepend(postElem)
+
+    //       post.notes.forEach(note => {
+    //         console.log(note)
+
+    //         let noteElem = document.createElement('div')
+    //         noteElem.innerHTML = `
+    //          ${note.body}
+    //          `
+    //         postElem.append(noteElem)
+    //       })
+    //     })
+    //   })
+
+    // document.addEventListener('click', event => {
+    //   if (event.target.classList.contains('posted')) {
+    //     console.log('ping')
+    //     localStorage.setItem('postId', event.target.dataset.postid)
+    //     location = '/post.html'
+    //   }
+    // })
 
     // async function logOut() {
     //   localStorage.removeItem('username')
