--- a/public/post.html
+++ b/public/post.html
@@ -32,8 +32,10 @@
       </div>
     </div>
   </nav>
- <div id="myPost" class ="container"></div>
- <div id="comments"></div> 
+ <div id="myPost" class ="container">
+  <div id="comments">
+  </div>
+ </div>
 
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
@@ -54,7 +56,6 @@
         <h3>${post.title}</h3>
         <hr class="my-4">
         <p class="lead">${post.body}</p>
-      </div>
     `
     document.getElementById('myPost').prepend(postElem)
 
